# phd-tools

./: README.md  flake.nix  install_bashrc.sh  install_scripts.sh
dev-shells/: flake.nix
marimo-scripts/: README.md  pyproject.toml
marimo-scripts/scripts/: visualize_disconn_graph.py  visualize_potential_compare.py  visualize_structures.py
nix-derivations/: flake.nix
py-scripts/: .gitignore  README.md  compare_order_structs.py  conda_env.yml  flake.nix  meta.yaml
shell-scripts/: add_to_bashrc.sh  cancel.sh  create_config.sh  flake.nix  new_csp.sh  new_thresh.sh  project.sh  result  utility_scripts.sh
